--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,18 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');
 
-
+:root {
+    --primary-font: "Varela Round", sans-serif;
+    --secondary-font: "Farsan", sans-serif;
+    --header-color: #4109C3;
+    --primary-color: white;
+}
 /* Global styles */
 
 body {
+    background-image: url(../images/pexels-anete-lusina-16513602.jpg);
     background-color: #929591;
+    background-size: cover;
 }
 
 /* Hero section */
@@ -25,17 +32,44 @@ body {
 #gs-logo {
     border-style: outset;
     border-radius: 10px;
+    border-color: rgb(44, 43, 43);
 }
 
+.navbar * {
+    color: var(--primary-color);
+}
 .navbar-brand {
     font-size: 100%;
 }
+
 .navbar {
     font-family: "Farsan", sans-serif;
     font-size: 40px;
 }
 
+.navbar a:hover {
+    color: #4109C3;
+}
+
+/* Change color for active page */
+.navbar-nav .nav-link.active, .navbar-nav .nav-link.show {
+    color: var(--header-color);
+}
+
+/* Change bootstrap background color for the navbar */
 .bg-body-tertiary {
     --bs-bg-opacity: 1;
-    background-color: #929591 !important;
+    background-color: transparent !important;
+}
+
+/* Buttons */
+
+
+/* Header */
+
+h1,
+h2,
+h3 {
+    color: var(--header-color);
+    font-family: var(--secondary-font);
 }
