--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,20 @@ div .card {
 
 /* Pricing cards */
 
+.card-text {
+    padding: 0.5em;
+}
+
+.pricing {
+    font-family: var(--secondary-font), sans-serif;
+    font-size: 140%;
+}
+
+.terms {
+    text-align: center;
+    color: var(--primary-color);
+    font-family: var(--secondary-font);
+}
 
 /* Header */
 
